# oracle-steam

./: Cargo.toml  build.rs  codegen.py  game_integration.h  integration.rs  tree.py
crates/oracle-callbacks/: Cargo.toml
crates/oracle-callbacks/src/: call_results.rs  callback_manager.rs  lib.rs  types.rs
crates/oracle-core/: Cargo.toml
crates/oracle-core/src/: achievements.rs  client.rs  lib.rs  protection.rs  stats.rs  steam_integration.rs  storage.rs  ticket_manager.rs  tickets.rs  user.rs
crates/oracle-core/src/apps/: mod.rs
crates/oracle-core/src/config/: mod.rs
crates/oracle-core/src/friends/: avatar.rs  clan.rs  mod.rs
crates/oracle-core/src/licenses/: mod.rs
crates/oracle-core/src/tickets/: cache.rs  crypto.rs  generator.rs  session.rs  validator.rs
crates/oracle-core/src/utils/: mod.rs
crates/oracle-injection/: Cargo.toml
crates/oracle-injection/src/: early_injector.rs  injector.rs  injector.rs.bak  lib.rs  loader.rs  main.rs  process.rs  steam_client.rs
crates/oracle-input/: Cargo.toml
crates/oracle-input/src/: lib.rs
crates/oracle-networking/: Cargo.toml
crates/oracle-networking/src/: lib.rs  lobby.rs  matchmaking.rs  nat_traversal.rs  p2p.rs  protocols.rs
crates/oracle-overlay/: Cargo.toml
crates/oracle-overlay/src/: input.rs  lib.rs
crates/oracle-overlay/src/graphics/: d3d11.rs  d3d12.rs  mod.rs  opengl.rs  vulkan.rs
crates/oracle-protocol/: Cargo.toml
crates/oracle-protocol/src/: lib.rs
crates/oracle-proxy/: Cargo.toml  build.rs
crates/oracle-proxy/src/: lib.rs
crates/oracle-relay/: Cargo.toml
crates/oracle-relay/src/: lib.rs
crates/oracle-server/: Cargo.toml
crates/oracle-server/src/: lib.rs
crates/oracle-steamvent/: Cargo.toml
crates/oracle-steamvent/src/: cm_client.rs  lib.rs
crates/oracle-steamvent/src/protocol/: encryption.rs  messages.rs  mod.rs  serialization.rs
crates/oracle-steamvent/src/services/: auth.rs  content.rs  friends.rs  matchmaking.rs  mod.rs
crates/oracle-steamvent/src/transport/: mod.rs  tcp.rs  udp.rs  websocket.rs
crates/oracle-storage/: Cargo.toml
crates/oracle-storage/src/: lib.rs
crates/oracle-ugc/: Cargo.toml
crates/oracle-ugc/src/: lib.rs
crates/oracle-ui/: index.html  package-lock.json  package.json  vite.config.js
crates/oracle-ui/src/: App.svelte  main.js
crates/oracle-ui/src/assets/styles/: global.css  overlay.css
crates/oracle-ui/src/stores/: achievements.js  chat.js  friends.js  overlay.js
crates/oracle-voice/: Cargo.toml
crates/oracle-voice/src/: lib.rs
crates/steam-api/: Cargo.toml  steam_api.def
crates/steam-api-32/: Cargo.toml
crates/steam-api/src/: advanced_sockets.rs  apps.rs  friends.rs  friends_complete.rs  gameserver.rs  htmlsurface.rs  http.rs  input.rs  inventory.rs  lib.rs  matchmaking.rs  music.rs  networking.rs  networking_sockets.rs  online-fix.rs  parental.rs  remote_storage.rs  stats.rs  ugc.rs  user.rs  user_complete.rs  utils.rs  video.rs
crates/steam-api/src/interfaces/: steam_apps.rs  steam_friends.rs  steam_matchmaking.rs  steam_utils.rs
crates/steam-wrapper/: Cargo.toml
crates/steam-wrapper/src/: lib.rs
crates/steamclient/: Cargo.toml
crates/steamclient-32/: Cargo.toml
crates/steamclient-32/src/: lib.rs
crates/steamclient/src/: lib.rs  pipe.rs
crates/steamclient/src/interfaces/: mod.rs
examples/basic-integration/: integration.rs
tools/app-id-finder/: Cargo.toml
tools/app-id-finder/src/: main.rs
tools/config-generator/: Cargo.toml
tools/config-generator/src/: main.rs
tools/ticket-generator/src/: ticket_generator.rs
