[workspace]
resolver = "2"
members = [
    "crates/steam-api",
    "crates/steam-api-32",
    "crates/steamclient",
    "crates/steamclient-32",
    "crates/steam-wrapper",
    "crates/oracle-core",
    "crates/oracle-networking",
    "crates/oracle-callbacks",
    "crates/oracle-storage",
    "crates/oracle-ugc",
    "crates/oracle-input",
    "crates/oracle-voice",
    "crates/oracle-overlay",
    "crates/oracle-server",
    "crates/oracle-relay",
    "crates/oracle-hook",
    "crates/oracle-injection",
    "crates/oracle-proxy",
    "crates/oracle-protocol",
    "crates/oracle-steamvent",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Oracle Steam Team"]
license = "MIT"

[workspace.dependencies]
parking_lot = "0.12"
once_cell = "1.19"
lazy_static = "1.4"
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
protobuf = "3.3"
protobuf-codegen = "3.3"
reqwest = { version = "0.11", features = ["json", "stream"] }
hyper = { version = "0.14", features = ["full"] }
tungstenite = "0.21"
aes = "0.8"
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
hex = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
mlua = { version = "0.9", features = ["lua54", "vendored"] }
clap = { version = "4.4", features = ["derive"] }
winapi = { version = "0.3", features = [
    "winuser",
    "libloaderapi",
    "processthreadsapi",
    "memoryapi",
    "handleapi",
    "synchapi",
    "errhandlingapi",
    "winnt",
    "winsock2",
    "ws2def",
    "ws2ipdef",
    "psapi",
    "tlhelp32",
    "winbase",
] }
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Networking_WinSock",
] }
winreg = "0.52"
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
