[package]
name = "oracle-injection"
version.workspace = true
edition.workspace = true

[[bin]]
name = "oracle-injector"
path = "src/main.rs"

[lib]
name = "oracle_injection"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
log.workspace = true
env_logger.workspace = true
serde.workspace = true
serde_json.workspace = true
clap = { workspace = true }
rand.workspace = true

[target.'cfg(windows)'.dependencies]
winapi = { workspace = true }
windows = { workspace = true }

# Remove [build-dependencies] section if present
