[package]
name = "oracle-networking"
version.workspace = true
edition.workspace = true

[lib]
name = "oracle_networking"

[dependencies]
parking_lot.workspace = true
tokio.workspace = true
async-trait.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
protobuf.workspace = true
reqwest = { workspace = true }
hyper = { workspace = true }
tungstenite.workspace = true
aes.workspace = true
sha2.workspace = true
hmac.workspace = true
rand.workspace = true
hex.workspace = true
tracing.workspace = true

oracle-core = { path = "../oracle-core" }

[target.'cfg(windows)'.dependencies]
winapi = { workspace = true }

[build-dependencies]
protobuf-codegen.workspace = true
