[package]
name = "oracle-storage"
version.workspace = true
edition.workspace = true

[lib]
name = "oracle_storage"

[dependencies]
parking_lot.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite = { workspace = true }
chrono.workspace = true
tokio.workspace = true
sha2.workspace = true

oracle-core = { path = "../oracle-core" }
