[package]
name = "oracle-ugc"
version.workspace = true
edition.workspace = true

[lib]
name = "oracle_ugc"

[dependencies]
parking_lot.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest = { workspace = true }
rusqlite = { workspace = true }
chrono.workspace = true

oracle-core = { path = "../oracle-core" }
oracle-storage = { path = "../oracle-storage" }
oracle-networking = { path = "../oracle-networking" }
