[package]
name = "steamclient"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]
name = "steamclient64"

[dependencies]
parking_lot.workspace = true
once_cell.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true

oracle-core = { path = "../oracle-core" }
oracle-callbacks = { path = "../oracle-callbacks" }
oracle-networking = { path = "../oracle-networking" }
oracle-storage = { path = "../oracle-storage" }
oracle-server = { path = "../oracle-server" }

[target.'cfg(windows)'.dependencies]
winapi = { workspace = true }
